# cnn_multi_pixel

./: .gitignore  EDA_powertrace_exponent.ipynb  EDA_test_functions.ipynb  README.md  __main__.py  cnn_5px_ResNet18.ipynb  future_work.md  hyperparams.py  pyproject.toml  requirements.txt  script.py  to_do.md
junk/: preprocessing_exp.py
notebooks/: EDA_test_functions.ipynb  cnn_5px_ResNet18.ipynb
py_files/: dataloader.py  file_preprocess.py
src/: __main__.py
src/cnn_multi_pixel/: __init__.py  create_dataset.py  dataloader.py  dataset_raw.py  file_preprocess.py  hyperparams.py  normalizer.py  preprocessing.py  preprocessing_array.py  preprocessing_exp.py  preprocessing_file.py  preprocessing_norm.py  subsampler.py
src/cnn_multi_pixel/dataloader/: dataloader.py
src/cnn_multi_pixel/dataset/: dataset_raw.py  dataset_sampled.py
src/cnn_multi_pixel/helper_functions/: normalizer.py  subsampler.py
src/cnn_multi_pixel/preprocessing/: preprocessing_array.py
trace_files/digital_5px/digital_5px_fs_p/: sky_lin_s0_197_215_20_132_248.txt  sky_lin_s100_3_150_188_12_119.txt  sky_lin_s101_72_95_232_57_244.txt  sky_lin_s102_176_132_66_14_106.txt  sky_lin_s103_185_171_242_149_151.txt  sky_lin_s104_167_94_41_52_157.txt  sky_lin_s105_80_192_75_64_114.txt  sky_lin_s106_161_124_121_94_149.txt  sky_lin_s107_190_214_23_67_10.txt  sky_lin_s108_201_39_37_67_215.txt  sky_lin_s109_153_213_72_216_152.txt  sky_lin_s10_149_63_170_104_147.txt  sky_lin_s110_181_43_127_227_189.txt  sky_lin_s111_29_192_209_4_213.txt  sky_lin_s112_164_225_104_190_150.txt  sky_lin_s113_241_46_94_55_141.txt  (+240 more)
